2005-05-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* lua.cc (loadstring, run_string): New parameter to identify the
	source of the Lua string being loaded.
	(add_{std,test}_hooks, load_rcfile): Pass an identity through.

2005-05-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.cc: Absolutify and tilde expand pid file.

2005-05-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Revert bogus changes committed in revision 9d478.

2005-05-09  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc (pid_file): use fs::path .empty() rather than ==, since
	boost 1.31 doesn't seem to have the latter.

2005-05-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* lua.cc (report_error, load{file,string}): New member functions.
	Error handling in call moved into report_error.
	(call): Call report_error.
	(run_{file,string}): Call load{file,string} member functions to
	load Lua code into the VM.  Allows us to report syntax errors when
	loading rc files.
	* testsuite.at: test_hooks.lua was calling nonexistent (obsolete)
	strfind function and failing silently.  The improved error
	reporting from Lua caught this and cause testsuite failures.

2005-05-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.1: Document --pid-file option.  Also make some minor
	spelling and punctuation fixes.

2005-05-08  Timothy Brownawell  <tbrownaw@gmail.com>
	* app_state.cc: {read,write}_options now print a warning instead of
	failing on unreadable/unwritable MT/options .
	* tests/t_unreadable_MT.at: add matching test
	* testsuite.at: add test
	* tests/README: Mention that new tests must be added to testsuite.at
	* work.cc: (get_revision_id) Friendlier error message for
	unreadable MT/revision .

2005-05-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.texi: Right words, wrong order.
	* testsuite.at: Drop pid mapping trickery, it doesn't work
	consistently.  We now try and use SysInternal's pskill to kill the
	process.  If pskill is not available, we fall back to the old