@@ -1,3 +1,7 @@
+2005-05-10  Timothy Brownawell  <tbrownaw@gmail.com>
+
+	* ui.cc: Make tick_write_count take less horizontal space
+
 2005-05-09  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* lua.cc (loadstring, run_string): New parameter to identify the
